k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: html-app
  template:
    metadata:
      labels:
        app: html-app
    spec:
      containers:
        - name: nginx
          image: maharaja30033003/k8-html:v1
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: html-service
spec:
  type: ClusterIP
  selector:
    app: html-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
